--- a/eCommerceAPI/WebApplication1/Properties/launchSettings.json
+++ b/eCommerceAPI/WebApplication1/Properties/launchSettings.json
@@ -4,8 +4,8 @@
     "windowsAuthentication": false, 
     "anonymousAuthentication": true, 
     "iisExpress": {
-      "applicationUrl": "http://localhost:53924",
-      "sslPort": 44345
+      "applicationUrl": "http://localhost:65264",
+      "sslPort": 44327
     }
   },
   "profiles": {
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "eCommerceAPI": {
+    "WebApplication1": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "api/values",
